fix z-index

--- a/styles/atom-browser.less
+++ b/styles/atom-browser.less
@@ -6,7 +6,7 @@
 
 #atombrowser-view{
    box-sizing:border-box;
-
+   z-index:1;
    #atombrowser-tabs{
       border-bottom:none;
       border-bottom: none;
